se agrego funcionalidad de estadisticas
